Minor changes to project 2

--- a/projects/2/deliverables/about.html
+++ b/projects/2/deliverables/about.html
@@ -88,7 +88,8 @@
                     <ul><i>Fall 2010</i></ul>
                     <ul> Organized and lead review sessions for the students</ul>
                     <ul> Taught several classes to a lecture hall of over one hundred students</ul>
-                <li> Assistant Supervisor to Dr. Paul J. Pacheco at Archaeological Field School, <i>Summer 2010</i></li>
+                <li> Assistant Supervisor to Dr. Paul J. Pacheco at Archaeological Field School </li>
+                    <ul><i>Summer 2010</i></ul>
                     <ul> Supervised field technicians; kept them organized and on schedule</ul>
                     <ul> Kept a detailed log of excavation progress and organized the technicians' field notes</ul>
             </ul>
@@ -98,7 +99,7 @@
     <div class="section" id="contact">
         <h2>Contact Information</h2>
         <p> Email: kara.james@colorado.edu </p>
-        <p> GitHub <a href="https://github.com/Aeowynn">Repository</a></p>
+        <p> Link to GitHub <a href="https://github.com/Aeowynn">Repository</a></p>
     </div>
 
 </div>
