--- a/projects/5/example/functions.html
+++ b/projects/5/example/functions.html
@@ -21,7 +21,7 @@
         return a + b;
       }
 
-      expect(add(1, 2)).toBe(FILL_ME_IN);
+      expect(add(1, 2)).toBe(3);
     });
 
     it("should know internal variables override outer variables", function () {
@@ -36,9 +36,9 @@
         return message;
       }
 
-      expect(getMessage()).toBe(FILL_ME_IN);
-      expect(overrideMessage()).toBe(FILL_ME_IN);
-      expect(message).toBe(FILL_ME_IN);
+      expect(getMessage()).toBe("Outer");
+      expect(overrideMessage()).toBe("Inner");
+      expect(message).toBe("Outer");
     });
 
     it("should have lexical scoping", function () {
@@ -50,7 +50,7 @@
         }
         return childfunction();
       }
-      expect(parentfunction()).toBe(FILL_ME_IN);
+      expect(parentfunction()).toBe("local");
     });
 
     it("should use lexical scoping to synthesise functions", function () {
@@ -67,7 +67,7 @@
       var mysteryFunction3 = makeMysteryFunction(3);
       var mysteryFunction5 = makeMysteryFunction(5);
 
-      expect(mysteryFunction3(10) + mysteryFunction5(5)).toBe(FILL_ME_IN);
+      expect(mysteryFunction3(10) + mysteryFunction5(5)).toBe(23);
     });
 
     it("should allow extra function arguments", function () {
@@ -76,13 +76,13 @@
         return firstArg;
       }
 
-      expect(returnFirstArg("first", "second", "third")).toBe(FILL_ME_IN);
+      expect(returnFirstArg("first", "second", "third")).toBe("first");
 
       function returnSecondArg(firstArg, secondArg) {
         return secondArg;
       }
 
-      expect(returnSecondArg("only give first arg")).toBe(FILL_ME_IN);
+      expect(returnSecondArg("only give first arg")).toBe(undefined);
 
       function returnAllArgs() {
         var argsArray = [];
@@ -92,7 +92,7 @@
         return argsArray.join(",");
       }
 
-      expect(returnAllArgs("first", "second", "third")).toBe(FILL_ME_IN);
+      expect(returnAllArgs("first", "second", "third")).toBe("first,second,third");
     });
 
     it("should pass functions as values", function () {
@@ -106,10 +106,10 @@
       };
 
       var praiseSinger = { givePraise: appendRules };
-      expect(praiseSinger.givePraise("John")).toBe(FILL_ME_IN);
+      expect(praiseSinger.givePraise("John")).toBe("John rules!");
 
       praiseSinger.givePraise = appendDoubleRules;
-      expect(praiseSinger.givePraise("Mary")).toBe(FILL_ME_IN);
+      expect(praiseSinger.givePraise("Mary")).toBe("Mary totally rules!");
 
     });
   });
