Progress on Javascript for class; progress on Board Game Apps as well

--- a/practice/BoardGameApps/index.html
+++ b/practice/BoardGameApps/index.html
@@ -10,6 +10,23 @@
 
 <body>
     <div class="container-fluid">
+        <!-- Nav Bar -->
+        <div class="nav">
+            <div class="container">
+                <ul>
+                    <li><a href="#"> Main Page </a></li>
+                    <li><a href="#"> Blog Posts </a></li>
+                    <li><a href="#"> Board Game Assistants </a></li>
+                    <li><a href="#"> About </a></li>
+                </ul>
+                <ul>
+                  <li><a href="#"> Sign Up </a></li>
+                  <li><a href="#"> Log In </a></li>
+                  <li><a href="#"> Help </a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- Header Image -->
         <div id="header" class="row">
             <img class="img-responsive" src="http://placehold.it/350x150" style="width:100%;">
         </div>
@@ -49,7 +66,7 @@
                     </ul>
                 <h4 id="DaysOfWonder"> Days of Wonder Games </h4>
                     <ul>
-                        <li>Smallworld Score Tracker</li>
+                        <li><a href="smallworld_score.html">Smallworld Score Tracker</a></li>
                     </ul>
                 <h4 id="RioGrande"> Rio Grande Games </h4>
                     <ul>
