Progress on Board Game Apps Styling

--- a/practice/BoardGameApps/index.html
+++ b/practice/BoardGameApps/index.html
@@ -5,13 +5,13 @@
     <title>Board Game Assistants: Main Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style_bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
     <div class="container-fluid">
         <div id="header" class="row">
-            <img class="img-responsive" src="http://placehold.it/350x150" style="width:100%;">
+            <img class="img-responsive" src="http://placehold.it/300x100" style="width:100%;">
         </div>
         <div id="content-section" class="row">
             <div class="col-md-8 col-sm-7 col-xs-12">
@@ -25,19 +25,47 @@
                 </p>
             </div>
             <div class="col-md-4 col-sm-5 col-xs-12">
-                <img class="img-responsive" src="http://placehold.it/200x200">
+                <img class="img-responsive" src="http://placehold.it/400x200">
             </div>
         </div>
         <div id="content-section" class="row">
-            <div class="col-md-4 col-sm-5 col-xs-12">
-                <img class="img-responsive" src="http://placehold.it/200x200">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <h4>Assistant Apps</h4>
+                <p> These apps help with setting up and playing board games. </p>
+                <ul>
+                    <li><a href=#QueenApp> Queen Games </a></li>
+                    <li><a href=#DaysOfWonderApp> Days of Wonder Games </a></li>
+                    <li><a href=#RioGrandeApp> Rio Grande Games </a></li>
+                </ul>
             </div>
-            <div class="col-md-8 col-sm-7 col-xs-12">
-                <h4>Sections</h4>
+        </div>
+        <div id="content-section" class="row">
+            <div class="col-md-12 col-sm-12">
+                <h4 id="QueenApp"> Queen Games </h4>
+                    <ul> 
+                        <li><a href="escape_music.html">Escape! Soundtrack Player</a></li>
+                    </ul>
+                <h4 id="DaysOfWonderApp"> Days of Wonder Games </h4>
+                    <ul>
+                        <li>Smallworld Score Tracker</li>
+                    </ul>
+                <h4 id="RioGrandeApp"> Rio Grande Games </h4>
+                    <ul>
+                        <li> Dominion Card Picker</li>
+                    </ul>
+            
+            </div>
+        </div>
+
+        <div id="content-section" class="row">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <h4>Rules Variations and Clarifications</h4>
+                <p> This is a collection of rules variations and re-writes that we've collected over the years. </p>
                 <ul>
                     <li><a href=#Queen> Queen Games </a></li>
                     <li><a href=#DaysOfWonder> Days of Wonder Games </a></li>
                     <li><a href=#RioGrande> Rio Grande Games </a></li>
+                    <li><a href=#FantasyFlight> Fantasy Flight Games </a></li>
                 </ul>
             </div>
         </div>
@@ -55,9 +83,14 @@
                     <ul>
                         <li> Dominion Card Picker</li>
                     </ul>
+                <h4 id="Fantasy Flight"> Fantasy Flight Games </h4>
+                    <ul>
+                        <li> Elder Sign </li>
+                    </ul>
             
             </div>
         </div>
+
     </div>
 </body>
 
