Made a navbar; started getting embedded music working

--- a/practice/BoardGameApps/escape_music.html
+++ b/practice/BoardGameApps/escape_music.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Escape! Soundtrack</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="http://sstatic.net/stackoverflow/img/favicon.ico">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -16,38 +17,37 @@
         <div id="content-section" class="row">
             <div class="col-md-8 col-sm-7 col-xs-12">
                 <h1>Escape Soundtrack</h1>
+                <p id="intro"> The source for all your ESCAPE audio needs! <br>
+                    Includes introductory rules in English, French and German. <br>
+                    All soundtrack files are in English. </p>
             </div>
             <div class="col-md-4 col-sm-5 col-xs-12">
-                <img class="img-responsive" src="http://placehold.it/200x200">
+                <img class="img-responsive" src="http://placehold.it/200x100">
             </div>
         </div>
         <div id="content-section" class="row">
-            <div class="col-md-4 col-sm-5 col-xs-12">
-                <img class="img-responsive" src="http://placehold.it/200x200">
-            </div>
-            <div class="col-md-8 col-sm-7 col-xs-12">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <h4> Introduction </h4>
+                    <p>English</p>
                 <audio controls>
-                <h4> English </h4>
-                <ul>
-                    <li> <source src="soundtrack1.mp3" type="audio/mpeg">Soundtrack 1</source></li>
-                    <li> <source src="soundtrack2.mp3" type="audio/mpeg">Soundtrack 2 </source></li>
-                    <li> <source src="soundtrack3.mp3" type="audio/mpeg">Soundtrack 3 </source></li>
-                    <li> <source src="soundtrack4.mp3" type="audio/mpeg">Soundtrack 4 </source></li>
-                </ul>
-                <h4> German </h4>
-                <ul>
-                    <li> Soundtrack 1 </li>
-                    <li> Soundtrack 2 </li>
-                    <li> Soundtrack 3 </li>
-                    <li> Soundtrack 4 </li>
-                </ul>
-                <h4> French </h4>
-                <ul>
-                    <li> Soundtrack 1 </li>
-                    <li> Soundtrack 2 </li>
-                    <li> Soundtrack 3 </li>
-                    <li> Soundtrack 4 </li>
-                </ul>
+                    <source src="assets/music/intro_english.mp3" type="audio/mpeg"></source>
+                </audio>
+                    <p>French</p>
+                <audio controls>
+                    <source src="assets/music/intro_french.mp3" type="audio/mpeg"></source>
+                </audio>
+                    <p>German</p>
+                <audio controls>
+                    <source src="assets/music/intro_german.mp3" type="audio/mpeg"></source>
+                </audio>
+                <h4>Music Files</h4>
+                    <p>Soundtrack 1:</p>
+                <audio controls>
+                    <source src="assets/music/soundtrack1.mp3" type="audio/mpeg"></source>
+                </audio>
+                    <p>Soundtrack 2:</p>
+                <audio controls>
+                    <source src="assets/music/soundtrack2.mp3" type="audio/mpeg">Soundtrack 2 </source>
                 </audio>
             </div>
         </div>
