Made progress on SmallWorldScore

--- a/practice/BoardGameApps/index.html
+++ b/practice/BoardGameApps/index.html
@@ -77,7 +77,7 @@
                     </ul>
                 <h4 id="DaysOfWonderApp"> Days of Wonder Games </h4>
                     <ul>
-                        <li>Smallworld Score Tracker</li>
+                        <li><a href="smallworld_score.html">Smallworld Score Tracker</a></li>
                     </ul>
                 <h4 id="RioGrandeApp"> Rio Grande Games </h4>
                     <ul>
