--- a/practice/BoardGameApps/smallworld_score.html
+++ b/practice/BoardGameApps/smallworld_score.html
@@ -5,7 +5,7 @@
     <title>Smallworld Score</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style_bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
