--- a/projects/7/deliverables/home.html
+++ b/projects/7/deliverables/home.html
@@ -21,15 +21,15 @@
 			<div id="search_form" class="col-md-12 col-sm-12 col-xs-12">
 				<div class="text-center">
 					<p>Find a person by first or last name:</p>
-					<input class="tf name no-margin" type="text" name="search_name" placeholder="Enter Name Here">
-					<input class="submitButton" type="submit" value="Search">
+					<input id="search_name" class="tf name no-margin" type="text" name="search_name" placeholder="Enter Name Here">
+					<input id="submitButton" class="submitButton" type="submit" value="Search">
 				</div>
 			</div>
 
 			<div id="display_all" class="col-md-12 col-sm-12 col-xs-12">
 				<div class="text-center">
 					<p> Or display all the contacts:</p>
-					<input class="SubmitButton" type="submit" value="Display All">
+					<input id="display_all_button" class="SubmitButton" type="submit" value="Display All">
 				</div>
 			</div>
 
@@ -47,13 +47,40 @@
 			url: 'api/v1/phonebook/data.json',
 			method: 'GET'
 		}).then(function(data) {
-			data.map(function(row) {
-				var first_name = row['first_name']
-				$('.first_name').append(first_name + "<br>");
-				var profile_pic = row['profile_pic']
-				$('.profile_pic').append("<img src='assets/images/profile_pictures" + profile_pic + "<br>");
+			$.getJSON('api/v1/phonebook/data.json', function(data) {
+				console.log(data);
 			})
+			findName(data);
+			displayAll(data);
+
+			var search_text = $('#search_name')
+			var first_name = row['first_name']
+			$('.first_name').append(first_name + "<br>");
+			var profile_pic = row['profile_pic']
+			$('.profile_pic').append("<img src='assets/images/profile_pictures" + profile_pic + "<br>");
 		});
+		
+		function findName(data) {
+			$('#submitButton').on('click', function() {
+				var search_text = document.getElementById("search_name").value;
+				var contact_id;
+				for (i=0; i<data.length; i++) {
+					if (search_text == data[i].first_name) {
+						console.log("Found it!" + data[i].first_name);
+						contact_id = data[i].id;
+					}
+				}
+				window.location.href = "search_results.html?id="+contact_id;
+			})
+		};
+
+		function displayAll(data) {
+			$('#display_all_button').on('click', function() {
+				console.log("clicked!");
+				window.location.href = "show_all.html";
+			})
+		};
+
 		</script>
 
 	</body>
