--- a/projects/7/deliverables/show_all.html
+++ b/projects/7/deliverables/show_all.html
@@ -12,16 +12,15 @@
 		<div class="container-fluid">
 			<div id="header" class="navbar">
 				<h1 class="text-center"> The Phonebook App </h1>
+				<p><a class="homepage_link" href="home.html">Go To Homepage</a></p>
 			</div>
             
-			<div id="all_contacts" class="col-md-12 col-sm-12 col-xs-12">
-                <h3 id="results"> Results: </h3>
+			<div class="outer_container col-md-12 col-sm-12 col-xs-12">
+				<div id="results">
+                	<h3> Results: </h3>
+            	</div>
 				<div class="contacts"></div>
 			</div>
-
-			<div id="footer" class="navbar">
-				<h3>Footer</h3>
-			</div>	
 			
 		</div>
 
@@ -39,11 +38,9 @@
 		    		phone = row['phone'],
 		    		picture = row['profile_pic']
 		    	$('.contacts').append('<div class="contact_id" id="' + id + '"></div>');
-		    	$('#'+id).append('<div class="profile_pic"><img src="assets/images/profile_pictures/' + id + '.jpg">')
-		    	$('#'+id).append('<div class="name">' + last_name + ' , ' + first_name + '</div>');
-		    	$('#'+id).append('<div class="address">' + address + '</div>');
-		    	$('#'+id).append('<div class="phone">' + phone + '</div>');
-		    	$('#'+id).append('<div class="email">' + email + '</div>');
+		    	$('#'+id).append('<div class="profile_pic"><img class="img-responsive" src="assets/images/profile_pictures/' + id + '.jpg">')
+		    	$('#'+id).append('<div class="name">' + first_name + ' ' + last_name + '</div>');
+		    	$('#'+id).append('<div class="idlink"><a href="profile_page.html?id=' + id + '">Go To Profile Page</a></div></li>');
 		    })
 		});
 		</script>
